query the CVS tree.  For example,

    http://cvs-mirror.mozilla.org/webtools/bonsai/cvsquery.cgi?module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fwebtools%2Fbugzilla&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvsroot 

will tell you what has been changed in the last week.


1/29/99 Whoops; had a mispelled op_sys.  It was "Mac System 7.1.6"; it should
be "Mac System 7.6.1".  It turns out I had no bugs with this value set, so I
could just do the below simple command.  If you have bugs with this value, you
may need to do something more complicated.

	alter table bugs change column op_sys op_sys enum("All", "Windows 3.1", "Windows 95", "Windows 98", "Windows NT", "Mac System 7", "Mac System 7.5", "Mac System 7.6.1", "Mac System 8.0", "Mac System 8.5", "AIX", "BSDI", "HP-UX", "IRIX", "Linux", "OSF/1", "Solaris", "SunOS", "OS/2", "other") not null;



1/20/99 Added new fields: Target Milestone, QA Contact, and Status Whiteboard.
These fields are all optional in the UI; there are parameters to turn them on.
However, whether or not you use them, the fields need to be in the DB.  There
is some code that needs them, even if you don't.

To update your DB to have these fields, send the following to MySQL:

        alter table bugs add column target_milestone varchar(20) not null,
                add column qa_contact mediumint not null,
                add column status_whiteboard mediumtext not null,
                add index (target_milestone), add index (qa_contact);



1/18/99 You can now query by CC.  To make this perform reasonably, the CC table
needs some indices.  The following MySQL does the necessary stuff:

	alter table cc add index (bug_id), add index (who);


1/15/99 The op_sys field can now be queried by (and more easily tweaked).
To make this perform reasonably, it needs an index.  The following MySQL 
command will create the necessary index:

	alter table bugs add index (op_sys);

